--- a/TimCoreDemo/Podfile
+++ b/TimCoreDemo/Podfile
@@ -32,13 +32,19 @@ target:TimAFAppConnectClient  do
     
     
 end
+target:TimAFAppConnectClientFramwork  do
+    project 'TimAFAppConnectClient/TimAFAppConnectClient.xcodeproj'
+    
+    pod 'AFNetworking','~> 3.1.0'
+    
+    
+end
 
 
 
 
 
-
-target:TimBaseListViewModel  do
+target:TimBaseListViewModelDemo  do
     project 'TimBaseListViewModel/TimBaseListViewModel.xcodeproj'
     
     pod 'ReactiveCocoa','~>2.5'
@@ -50,5 +56,16 @@ target:TimBaseListViewModel  do
     
     
 end
-
+target:TimBaseListViewModel  do
+    project 'TimBaseListViewModel/TimBaseListViewModel.xcodeproj'
+    
+    pod 'ReactiveCocoa','~>2.5'
+    pod 'TimCore/TimAFAppConnectClient'
+    
+    pod 'TimCore/TimProtocol'
+    pod 'TMCache'
+    
+    
+    
+end
 
